--- a/src/app/ProductModule/view-product/view-product.component.html
+++ b/src/app/ProductModule/view-product/view-product.component.html
@@ -38,7 +38,7 @@
             Cost-Price:
           </div>
           <div class="right">
-            {{product.cost}}
+            {{product.cost | addComma}}
           </div>
         </div>
         <div class="grid">
@@ -46,7 +46,7 @@
             Selling-Price:
           </div>
           <div class="right">
-            {{product.price}}
+            {{product.price | addComma}}
           </div>
         </div>
         <div class="grid">
