--- a/src/app/ProductModule/view-products/view-products.component.html
+++ b/src/app/ProductModule/view-products/view-products.component.html
@@ -48,10 +48,10 @@
               </div>
             </td>
             <td class="xY al-r">
-              {{item.cost}}
+              {{item.cost | addComma}}
             </td>
             <td class="xY al-r">
-              {{item.price}}
+              {{item.price | addComma}}
             </td>
             <td class="xY al-r las">
               {{item.quantity}}
