--- a/src/app/SalesModule/sales/sales.component.scss
+++ b/src/app/SalesModule/sales/sales.component.scss
@@ -437,3 +437,41 @@
 .bad{
   color: #ff5a5a;
 }
+
+.up{
+  position: fixed;
+  bottom: 10%;
+  right: 20%;
+  width: 45px;
+  height: 45px;
+  cursor: pointer;
+  box-shadow: 0px 2px 4px #e7eaeefa;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+
+  &:hover, &:active{
+
+    svg{
+      path{
+        stroke: rgb(138, 150, 172);
+      }
+    }
+  }
+
+  .goUp{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    // svg
+  }
+
+  .no{
+    position: absolute;
+    display: none;
+  }
+}
