--- a/src/app/SalesModule/view-sales/view-sales.component.scss
+++ b/src/app/SalesModule/view-sales/view-sales.component.scss
@@ -1,28 +1,80 @@
-.det{
+.det {
   padding-left: 40px;
   width: 30%;
+  position: relative;
+  overflow: visible;
 }
-.ovr{
+.ovr {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   max-width: 12vw;
+  position: relative;
+
+  &.enter + .ovra{
+    display: block;
+  }
 }
-.las{
+
+.las {
   width: 15%;
 }
 
-.btw{
+.btw {
   padding-left: 4rem;
 }
 
-.je{
+.je {
   border-radius: 2px;
   margin-bottom: 0px;
   font-size: 13px;
   color: #c7c7c7;
 }
-.inn{
+.inn {
   display: flex;
   white-space: nowrap;
+}
+
+.ovrb {
+  display: inline;
+}
+
+.ovra {
+  display: none;
+  position: absolute;
+  max-width: 300px;
+  background-color: #2d323b;
+  z-index: 10;
+  color: #f0f0f0;
+  border: 1px solid #BBC1E1;
+  padding: 5px 5px;
+  top: 74%;
+  left: 26%;
+  user-select: none;
+  visibility: visible;
+  -webkit-font-smoothing: antialiased;
+  font-size: 0.875rem;
+  letter-spacing: 0.2px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.14), 0px 0px 14px 2px rgba(0, 0, 0, 0.12), 0px 0px 0px 0 rgba(0, 0, 0, 0.2);
+  line-height: 20px;
+
+  .ovra1{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    border-bottom: solid 1px #f0f0f0;
+    padding-bottom: 2px;
+
+
+    // &:not(:last-child){
+    //   margin-bottom: 3px;
+    //   border-bottom: solid 1px #f0f0f0;
+    // }
+    &:last-child{
+      border-bottom: solid 0px #f0f0f0;
+    }
+
+  }
 }
