--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -65,7 +65,7 @@
       </div>
     </li>
     <li>
-      <a [routerLink]="['/']"  class="nav">
+      <a [routerLink]="['/adjustmentJornal/view']" routerLinkActive="nav-active" [routerLinkActiveOptions]="{exact: true}" class="nav">
         Adjustment Jornal
       </a>
     </li>
