--- a/src/app/ProductModule/product-stocks/product-stocks.component.scss
+++ b/src/app/ProductModule/product-stocks/product-stocks.component.scss
@@ -21,3 +21,13 @@
   font-size: 13px;
   color: #c7c7c7;
 }
+
+.table-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+
+  .t1{
+
+  }
+}
