--- a/src/app/ProductModule/view-product/view-product.component.scss
+++ b/src/app/ProductModule/view-product/view-product.component.scss
@@ -19,7 +19,17 @@
 }
 
 .tt{
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
   border-bottom: 2px solid #F5F7FB;
   padding-bottom: 10px;
   margin-bottom: 5px;
+
+  .side{
+
+    button{
+      margin: 0 5px;
+    }
+  }
 }
