--- a/src/app/SalesModule/sales-reverse-modal/sales-reverse-modal.component.scss
+++ b/src/app/SalesModule/sales-reverse-modal/sales-reverse-modal.component.scss
@@ -13,13 +13,14 @@
   background-color: rgba(61, 77, 106, 0.459);
 
   .modal{
-    padding: 20px;
+    padding: 20px 35px;
     position: relative;
     background-color: #fff;
     font-size: 1.2rem;
     border-radius: 10px;
-    padding: 50px;
     user-select: none;
+    min-width: 500px;
+    box-shadow: 0px 2px 4px rgba(121, 121, 121, 0.98);
 
     .close{
       display: inline-flex;
@@ -35,6 +36,21 @@
       &:hover svg path{
         stroke: #FFE379;
       }
+    }
+
+    .header{
+      border-bottom: 2px solid #F5F7FB;
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+    }
+
+    .footer{
+      padding-top: 10px;
+      margin-top: 10px;
+      border-top: 2px solid #F5F7FB;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
     }
   }
 
