--- a/src/app/SalesModule/view-sales/view-sales.component.html
+++ b/src/app/SalesModule/view-sales/view-sales.component.html
@@ -5,7 +5,7 @@
 <div class="main-layout">
   <div class="table-header">
     <div class="title">
-      Sales
+      Sales ({{total}})
     </div>
     <div class="je">
       List of all Sale Made
@@ -15,11 +15,6 @@
     <ng-template [ngIf]="sales.length > 0">
       <table>
         <thead>
-          <th>
-            <div class="checkbox">
-              <input name="checkbox" type="checkbox">
-            </div>
-          </th>
           <th style="padding-left: 30px;">
             Ref-No
           </th>
@@ -34,35 +29,33 @@
           </th>
         </thead>
         <tbody>
-          <tr *ngFor="let item of sales" class="table-row" [routerLink]="['/sales/view/'+item.id]">
-            <td class="xY">
-              <div class="checkbox">
-                <input name="checkbox" type="checkbox">
-              </div>
-            </td>
+          <tr
+            *ngFor="let item of sales"
+            class="table-row"
+            [routerLink]="['/sales/view/' + item.id]"
+          >
             <td class="xY" style="padding-left: 30px;">
-              {{item.ref_no}}
+              {{ item.ref_no }}
             </td>
             <td class="xY">
-              {{item.created_at}}
+              {{ item.created_at | date:'h:mm a EEEE, MMM d,  y,'  }}
             </td>
             <td class="xY al-r">
-              {{item.total  | addComma}}
+              {{ item.total | addComma }}
             </td>
             <td class="xY det">
               <div class="ovr" appDetails>
                 <div class="ovrb" *ngFor="let ab of item.details">
-                  Name: {{ab.name}}, &nbsp;Price: {{ab.price | addComma}}, &nbsp;Quantity:
-                  {{ab.quantity}}
+                  Name: {{ ab.name }}, &nbsp;Sub-Total:
+                  {{ ab.total | addComma }}, &nbsp;Quantity:
+                  {{ ab.quantity }}
                 </div>
               </div>
-              <div class="ovra" >
+              <div class="ovra">
                 <div class="ovra1" *ngFor="let ab of item.details">
-                  <div class="a">
-                    {{ab.name}}&nbsp;({{ab.quantity}})
-                  </div>
+                  <div class="a">{{ ab.name }}&nbsp;({{ ab.quantity }})</div>
                   <div class="b">
-                    {{ab.price | addComma}}
+                    {{ ab.total | addComma }}
                   </div>
                 </div>
               </div>
@@ -70,38 +63,39 @@
           </tr>
         </tbody>
       </table>
+      <div class="pagination">
+        <div class="pagin" (click)="prevPage()" [ngClass]="{'disabled': !prevPageUrl}">
+          Prev
+        </div>
+        <div
+          *ngFor="let item of pages; index as i"
+          (click)="setPage(item)"
+          class="pagin"
+          [ngClass]="{'active': item == currentPage}"
+        >
+          {{ item }}
+        </div>
+        <div (click)="nextPage()" class="pagin" [ngClass]="{'disabled': !nextPageUrl}">
+          Next
+        </div>
+      </div>
     </ng-template>
 
     <ng-template [ngIf]="sales.length == 0">
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
-      <div class="h-2 w-100 loading">
-      </div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
+      <div class="h-2 w-100 loading"></div>
     </ng-template>
-
   </div>
 </div>
